--- a/style.css
+++ b/style.css
@@ -519,6 +519,7 @@ body {
 }
 
 /* TODO HERE NOW */
+/* TODO remove all .label classes */
 /* TODO defo simplify this selector */
 #intro__right-column__title--secondary span {
     display: inline-block;
@@ -839,6 +840,7 @@ body {
     color: var(--modal-text);
 }
 
+/* TODO all values to segments */
 .modal .information dl div {
     padding-top: 48px;
     padding-left: 48px;
