--- a/animation.css
+++ b/animation.css
@@ -134,26 +134,20 @@ body {
 /* Universal Text Higlight */
 
 .highlight {
-    transition-property: color;
-    transition-duration: 0.3s;
-    transition-timing-function: var(--ease-in-quad);
-    transition-delay: 0.6s;
+    transition: color calc(2 * var(--animate-out-segment)) var(--ease-in-quad) var(--delay-segment);
 }
 
-.highlight.active {
+.highlight.active, .highlight-hover.active {
     color: var(--highlight-primary) !important;
-    transition-timing-function: var(--ease-out-quad);
-    transition-delay: unset;
+    transition: color calc(2 * var(--animate-in-segment)) var(--ease-out-quad) !important;
 }
 
-@keyframes highlight {
-    0% {
-        color: var(--highlight-primary);
-    }
+.highlight-hover:hover {
+    transition: color calc(2 * var(--animate-in-segment)) var(--ease-in-quad) var(--delay-segment) !important;
+}
 
-    100% {
-        color: inherit;
-    }
+.highlight-hover.active:hover {
+    transition: color calc(2 * var(--animate-in-segment)) var(--ease-out-quad) !important;
 }
 
 
@@ -253,45 +247,10 @@ svg.animate-face-icon path {
 }
 
 
-/* Modals */
-
-.modal .modal__content {
-    visibility: hidden;
-}
-
-.modal__profile .modal__content,
-.modal__archive .modal__content {
-    transition: opacity var(--animate-out-segment) linear, transform var(--animate-out-segment) var(--ease-in-quad), visibility 0s var(--animate-out-segment);
-    transform: scale(1.05);
-    transform-origin: top;
-}
-
-#profile:target~#page .modal__profile .modal__content,
-#archive:target~#page .modal__archive .modal__content {
-    visibility: visible;
-    transition: opacity var(--animate-in-segment) linear, transform var(--animate-in-segment) var(--ease-out-quad);
-    opacity: 1;
-    transform: scale(1);
-}
-
-#intro__left-column, #intro__right-column {
-    transition: transform var(--animate-out-segment) var(--ease-in-quad);
-    transform-origin: top;
-}
-
-#profile:target~#page #intro__left-column,
-#profile:target~#page #intro__right-column,
-#archive:target~#page #intro__left-column,
-#archive:target~#page #intro__right-column {
-    transition: transform var(--animate-in-segment) var(--ease-out-quad);
-    transform: scale(0.95);
-}
-
-
 /* Availability */
 
 #availability__dot::before {
-    transition: opacity calc(2 * var(--animate-out-segment)) linear, transform calc(2 * var(--animate-out-segment)) var(--ease-out-quad);
+    transition: opacity calc(2 * var(--animate-out-segment)) var(--ease-out-quad), transform calc(2 * var(--animate-out-segment)) var(--ease-out-quad);
     transform-origin: center;
     content: '';
     position: absolute;
@@ -302,7 +261,7 @@ svg.animate-face-icon path {
 }
 
 #availability__button a:hover #availability__dot::before {
-    transition: opacity calc(2 * var(--animate-in-segment)) linear, transform calc(2 * var(--animate-in-segment)) var(--ease-in-quad);
+    transition: opacity calc(2 * var(--animate-in-segment)) var(--ease-in-quad), transform calc(2 * var(--animate-in-segment)) var(--ease-in-quad);
     transform: scale(100);
 }
 
@@ -327,17 +286,12 @@ svg.animate-face-icon path {
 
 /* Intro Links */
 
-#menu__links>a svg {
-    transition: color var(--animate-out-segment-2\/3) linear;
-    color: var(--icon);
-}
-
 #menu__links>a {
-    transition: color var(--animate-out-segment-2\/3) linear, background-color var(--animate-out-segment-2\/3) linear;
-    color: var(--text-2);
+    transition: background-color var(--animate-out-segment-2\/3) linear;
 }
 
 #menu__links>a:hover {
+    transition: background-color var(--animate-in-segment-2\/3) linear;
     background-color: var(--highlight-secondary);
 }
 
@@ -345,16 +299,31 @@ svg.animate-face-icon path {
     background-color: var(--highlight-primary);
 }
 
-#menu__links>a:hover, #menu__links>a:hover svg {
-    transition: color var(--animate-in-segment-2\/3) linear,  background-color var(--animate-in-segment-2\/3) linear;
+#menu__links>a svg, #menu__email__button svg {
+    transition: color var(--animate-out-segment-2\/3) linear;
+    color: var(--icon);
+}
+
+#menu__links>a:hover svg, #menu__email__button:hover svg {
+    transition: color var(--animate-in-segment-2\/3) linear;
+    color: var(--icon-hover);
+}
+
+#menu__links>a span.button-label, #menu__email__button span.button-label {
+    transition: color var(--animate-out-segment-2\/3) linear;
+    color: var(--text-2);
+}
+
+#menu__links>a:hover span.button-label, #menu__email__button:hover span.button-label {
+    transition: color var(--animate-in-segment-2\/3) linear;
     color: var(--text-1);
 }
 
-#menu__links>a u {
+#menu__links>a span.button-label u {
     transition: text-decoration var(--animate-out-segment-2\/3) linear;
 }
 
-#menu__links>a:hover u {
+#menu__links>a:hover span.button-label u {
     transition: text-decoration var(--animate-in-segment-2\/3) linear;
     text-decoration-color: var(--text-2) !important;
 }
@@ -387,46 +356,61 @@ svg.animate-face-icon path {
 
 /* Menu Button */
 
-#menu__button__wrapper:hover #menu__button {
+#menu__button {
+    transition: color var(--animate-out-segment-2\/3) linear, background-color var(--animate-out-segment-2\/3) linear;
+    color: var(--icon);
+}
+
+#menu__button__wrapper:hover #menu__button, #menu:target #menu__button {
+    transition: color var(--animate-in-segment-2\/3) linear,  background-color var(--animate-in-segment-2\/3) linear;
+    color: var(--icon-hover);
     background-color: var(--highlight-secondary);
 }
 
 #menu__button span {
+    background-color: currentColor;
     will-change: transform;
     animation-fill-mode: both;
     animation-name: initial;
-    animation-duration: calc((var(--animate-in-segment) * 5));
 }
 
 #menu__button span:nth-child(1) {
+    animation-duration: calc((var(--animate-in-segment) * 3));
     animation-name: menu-top-left-reverse
 }
 
 #menu:target #menu__button span:nth-child(1) {
+    animation-duration: calc((var(--animate-out-segment) * 3));
     animation-name: menu-top-left;
 }
 
 #menu__button span:nth-child(2) {
+    animation-duration: calc((var(--animate-in-segment) * 3));
     animation-name: menu-top-right-reverse;
 }
 
 #menu:target #menu__button span:nth-child(2) {
+    animation-duration: calc((var(--animate-out-segment) * 3));
     animation-name: menu-top-right;
 }
 
 #menu__button span:nth-child(3) {
+    animation-duration: calc((var(--animate-in-segment) * 3));
     animation-name: menu-bottom-left-reverse;
 }
 
 #menu:target #menu__button span:nth-child(3) {
+    animation-duration: calc((var(--animate-out-segment) * 3));
     animation-name: menu-bottom-left;
 }
 
 #menu__button span:nth-child(4) {
+    animation-duration: calc((var(--animate-in-segment) * 3));
     animation-name: menu-bottom-right-reverse;
 }
 
 #menu:target #menu__button span:nth-child(4) {
+    animation-duration: calc((var(--animate-out-segment) * 3));
     animation-name: menu-bottom-right;
 }
 
@@ -440,35 +424,38 @@ svg.animate-face-icon path {
     45%, 55% {
         transform: translate(var(--menu-icon-radius), var(--menu-icon-radius));
     }
-    85%, 100% {
+    100% {
+        transform: translate(var(--menu-icon-radius), calc(-1 * ((1.5 * var(--menu-icon-gap-between)) - (0.5 * var(--menu-icon-gap)) + var(--menu-icon-bit-size))));
         animation-timing-function: var(--ease-out-quad);
-        transform: translate( var(--menu-icon-radius), calc(-1 * ((1.5 * var(--menu-icon-gap-between)) - (0.5 * var(--menu-icon-gap)) + var(--menu-icon-bit-size))));
     }
 }
 
 @keyframes menu-top-left-reverse {
     0% {
-        transform: translate( var(--menu-icon-radius), calc(-1 * ((1.5 * var(--menu-icon-gap-between)) - (0.5 * var(--menu-icon-gap)) + var(--menu-icon-bit-size))));
+        transform: translate(var(--menu-icon-radius), calc(-1 * ((1.5 * var(--menu-icon-gap-between)) - (0.5 * var(--menu-icon-gap)) + var(--menu-icon-bit-size)))) scale(1);
         animation-timing-function: var(--ease-in-quad);
     }
-    45%, 55% {
-        transform: translate(var(--menu-icon-radius), var(--menu-icon-radius));
+    45% {
+        transform: translate(var(--menu-icon-radius), calc(-1 * ((1.5 * var(--menu-icon-gap-between)) - (0.5 * var(--menu-icon-gap)) + var(--menu-icon-bit-size)))) scale(0);
+    }
+    55% {
+        transform: translate(0px, 0px) scale(0);
     }
     100% {
-        transform: translate(0px, 0px);
+        transform: translate(0px, 0px) scale(1);
         animation-timing-function: var(--ease-out-quad);
     }
 }
 
 @keyframes menu-top-right {
-    0%, 5% {
+    0% {
         transform: translate(0px, 0px);
         animation-timing-function: var(--ease-in-quad);
     }
-    50%, 60% {
+    45%, 55% {
         transform: translate(calc(-1 * var(--menu-icon-radius)), var(--menu-icon-radius));
     }
-    90%, 100% {
+    100% {
         transform: translate(calc(-1 * var(--menu-icon-radius)), calc(-1 * ((0.5 * var(--menu-icon-gap-between)) - (0.5 * (var(--menu-icon-gap))))));
         animation-timing-function: var(--ease-out-quad);
     }
@@ -476,27 +463,30 @@ svg.animate-face-icon path {
 
 @keyframes menu-top-right-reverse {
     0% {
-        transform: translate(calc(-1 * var(--menu-icon-radius)), calc(-1 * ((0.5 * var(--menu-icon-gap-between)) - (0.5 * (var(--menu-icon-gap))))));
+        transform: translate(calc(-1 * var(--menu-icon-radius)), calc(-1 * ((0.5 * var(--menu-icon-gap-between)) - (0.5 * (var(--menu-icon-gap)))))) scale(1);
         animation-timing-function: var(--ease-in-quad);
     }
-    45%, 55% {
-        transform: translate(calc(-1 * var(--menu-icon-radius)), var(--menu-icon-radius));
+    45% {
+        transform: translate(calc(-1 * var(--menu-icon-radius)), calc(-1 * ((0.5 * var(--menu-icon-gap-between)) - (0.5 * (var(--menu-icon-gap)))))) scale(0);
+    }
+    55% {
+        transform: translate(0px, 0px) scale(0);
     }
     100% {
-        transform: translate(0px, 0px);
+        transform: translate(0px, 0px) scale(1);
         animation-timing-function: var(--ease-out-quad);
     }
 }
 
 @keyframes menu-bottom-left {
-    0%, 10% {
+    0% {
         transform: translate(0px, 0px);
         animation-timing-function: var(--ease-in-quad);
     }
-    55%, 65% {
+    45%, 55% {
         transform: translate(var(--menu-icon-radius), calc(-1 * var(--menu-icon-radius)));
     }
-    95%, 100% {
+    100% {
         transform: translate(var(--menu-icon-radius), calc((0.5 * (var(--menu-icon-gap-between))) - (0.5 * (var(--menu-icon-gap)))));
         animation-timing-function: var(--ease-out-quad);
     }
@@ -504,24 +494,27 @@ svg.animate-face-icon path {
 
 @keyframes menu-bottom-left-reverse {
     0% {
-        transform: translate(var(--menu-icon-radius), calc((0.5 * (var(--menu-icon-gap-between))) - (0.5 * (var(--menu-icon-gap)))));
+        transform: translate(var(--menu-icon-radius), calc((0.5 * (var(--menu-icon-gap-between))) - (0.5 * (var(--menu-icon-gap))))) scale(1);
         animation-timing-function: var(--ease-in-quad);
     }
-    45%, 55% {
-        transform: translate(var(--menu-icon-radius), calc(-1 * var(--menu-icon-radius)));
+    45% {
+        transform: translate(var(--menu-icon-radius), calc((0.5 * (var(--menu-icon-gap-between))) - (0.5 * (var(--menu-icon-gap))))) scale(0);
+    }
+    55% {
+        transform: translate(0px, 0px) scale(0);
     }
     100% {
-        transform: translate(0px, 0px);
+        transform: translate(0px, 0px) scale(1);
         animation-timing-function: var(--ease-out-quad);
     }
 }
 
 @keyframes menu-bottom-right {
-    0%, 15% {
+    0% {
         transform: translate(0px, 0px);
         animation-timing-function: var(--ease-in-quad);
     }
-    60%, 70% {
+    45%, 55% {
         transform: translate(calc(-1 * var(--menu-icon-radius)), calc(-1 * var(--menu-icon-radius)));
     }
     100% {
@@ -532,14 +525,17 @@ svg.animate-face-icon path {
 
 @keyframes menu-bottom-right-reverse {
     0% {
-        transform: translate(calc(-1 * var(--menu-icon-radius)), calc((1.5 * var(--menu-icon-gap-between)) - (0.5 * (var(--menu-icon-gap))) + var(--menu-icon-bit-size)));
+        transform: translate(calc(-1 * var(--menu-icon-radius)), calc((1.5 * var(--menu-icon-gap-between)) - (0.5 * (var(--menu-icon-gap))) + var(--menu-icon-bit-size))) scale(1);
         animation-timing-function: var(--ease-out-quad);
     }
-    45%, 65% {
-        transform: translate(calc(-1 * var(--menu-icon-radius)), calc(-1 * var(--menu-icon-radius)));
+    45% {
+        transform: translate(calc(-1 * var(--menu-icon-radius)), calc((1.5 * var(--menu-icon-gap-between)) - (0.5 * (var(--menu-icon-gap))) + var(--menu-icon-bit-size))) scale(0);
+    }
+    55% {
+        transform: translate(0px, 0px) scale(0);
     }
     100% {
-        transform: translate(0px, 0px);
+        transform: translate(0px, 0px) scale(1);
         animation-timing-function: var(--ease-in-quad);
     }
 }
@@ -589,8 +585,8 @@ svg.animate-face-icon path {
 #menu__dropdown {
     visibility: hidden;
     opacity: 0;
-    transform: translateY(calc(-1 * (var(--segment-2\/3) / 8)));
-    transition: opacity var(--animate-out-segment-2\/3) linear, transform var(--animate-out-segment-2\/3) var(--ease-out-quad), visibility 0s var(--animate-out-segment-2\/3);
+    transform: translateX(-4px);
+    transition: opacity calc(1.25 * var(--animate-out-segment)) var(--ease-in-quad), transform calc(1.25 * var(--animate-out-segment)) var(--ease-in-quad), visibility 0s calc(1.25 * var(--animate-out-segment));
 }
 
 #menu:target #menu__dropdown {
@@ -598,7 +594,7 @@ svg.animate-face-icon path {
     pointer-events: auto;
     opacity: 1;
     transform: translateY(0px);
-    transition: opacity var(--animate-in-segment-2\/3) linear, transform var(--animate-in-segment-2\/3) var(--ease-out-quad);
+    transition: opacity calc(1.25 * var(--animate-in-segment)) var(--ease-out-quad), transform calc(1.25 * var(--animate-in-segment)) var(--ease-out-quad);
 }
 
 #menu__dropdown a:first-child:before {
@@ -618,8 +614,8 @@ svg.animate-face-icon path {
     position: absolute;
     inset: 9px 10px 10px 10px;
     /* inset: 3px 4px 4px 4px; */
-    z-index: -1;
-    background-color: var(--highlight-primary);
+    z-index: 0;
+    background-color: var(--highlight-secondary);
     border-radius: 1.5px;
     /* backdrop-filter: blur(2px); */
 }
@@ -637,12 +633,90 @@ svg.animate-face-icon path {
     transition: opacity var(--animate-in-segment-2\/3) linear, inset var(--animate-in-segment-2\/3) var(--ease-out-quad);
     opacity: 0.75;
     inset: 6px 7px 7px 7px;
-    /* transform: scale(1); */
-    /* transform: scale(0.975, 0.925); */
+}
+
+#menu__dropdown a span,
+#menu__dropdown label span {
+    transition: color var(--animate-out-segment-2\/3) linear;
+    z-index: 1;
+}
+
+#menu__dropdown a:hover span,
+#menu__dropdown label:hover span {
+    transition: color var(--animate-in-segment-2\/3) linear;
+}
+
+#menu__dropdown a svg,
+#menu__dropdown label svg {
+    transition: color var(--animate-out-segment-2\/3) linear;
+    color: var(--icon);
+    z-index: 1;
+}
+
+#menu__dropdown a:hover svg,
+#menu__dropdown label:hover svg {
+    transition: color var(--animate-out-segment-2\/3) linear, background-color var(--animate-out-segment-2\/3) linear;
+    color: var(--icon-hover);
+}
+
+#menu__dropdown label#menu__dropdown__light-mode:hover span {
+    color: var(--cyan-full-10);
 }
 
 #menu__dropdown label#menu__dropdown__light-mode::before {
     background-color: var(--yellow);
+}
+
+#menu__dropdown label#menu__dropdown__debug::before {
+    background-color: var(--highlight-primary);
+}
+
+
+/* Modals */
+
+.modal .modal__content {
+    visibility: hidden;
+}
+
+.modal__profile .modal__content,
+.modal__archive .modal__content {
+    transition: opacity var(--animate-out-segment) linear, transform var(--animate-out-segment) var(--ease-in-quad), visibility 0s var(--animate-out-segment);
+    transform: scale(1.05);
+    transform-origin: top;
+}
+
+#profile:target~#page .modal__profile .modal__content,
+#archive:target~#page .modal__archive .modal__content {
+    visibility: visible;
+    transition: opacity var(--animate-in-segment) linear, transform var(--animate-in-segment) var(--ease-out-quad);
+    opacity: 1;
+    transform: scale(1);
+}
+
+#intro__left-column, #intro__right-column {
+    transition: transform var(--animate-out-segment) var(--ease-in-quad);
+    transform-origin: top;
+}
+
+#profile:target~#page #intro__left-column,
+#profile:target~#page #intro__right-column,
+#archive:target~#page #intro__left-column,
+#archive:target~#page #intro__right-column {
+    transition: transform var(--animate-in-segment) var(--ease-out-quad);
+    transform: scale(0.95);
+}
+
+
+/* Modals - Close Button */
+
+#modal__button-close {
+    transition: color var(--animate-out-segment-2\/3) linear, border var(--animate-out-segment-2\/3) linear;
+}
+
+#modal__button-close:hover {
+    transition: color var(--animate-in-segment-2\/3) linear, border var(--animate-in-segment-2\/3) linear;
+    color: var(--modal-icon-hover);
+    border-color: var(--modal-icon-hover);
 }
 
 
