--- a/styles/animation.css
+++ b/styles/animation.css
@@ -7,6 +7,8 @@ body {
     --animate-out-segment-2\/3: calc(var(--animate-out-segment) * (2/3));
     --delay-segment-2\/3: calc(var(--delay-segment) * (2/3));
 
+    --delay-segment-1\/3: calc(var(--delay-segment) * (1/3));
+
     --ease-in-quad: cubic-bezier(0.11, 0, 0.5, 0);
     --ease-out-quad: cubic-bezier(0.5, 1, 0.89, 1);
     --ease-in-out-quad: cubic-bezier(0.11, 0, 0.5, 0);
